	 reflection for XeTeX".
	 * src/fontmap.c: Remove commented out old Mac code.
	 * src/fontmap.c (pdf_load_native_font_from_path, pdf_load_native_font):
	 Merge.
	 * src/dvi.c, src/fontmap.c, src/fontmap.h: Ignore native font family and
	 style names that we no longer use.
	 * src/dvi.c (read_native_font_record, do_native_font_def): Don't check
	 for XDV_FLAG_FONTTYPE_* flags as they do nothing.

2013-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/dpxutil.[ch]: Reduce diffs with dvipdfmx.
	* src/agl.c: Copied from ../dvipdfmx.
	* src/fontmap.c, src/pdfnames.c, src/pdfobj.c, src/spc_pdfm.c,
	src/tt_cmap.c: Adapt to modified definition of ht_*_table().

2013-02-22  Khaled Hosny  <khaledhosny@eglug.org>

	* src/fontmap.c (pdf_load_native_font_from_path): Fix loading font files
	without an extension (e.g. Mac suitcase fonts).

2013-02-21  Khaled Hosny  <khaledhosny@eglug.org>

	* src/tt_cmap.c (handle_subst_glyphs): Use FT_Get_Glyph_Name() instead of
	reading 'post' table directly, to handle CFF fonts where the 'post' table
	has no glyph names.
	* rc/tt_cmap.c (create_ToUnicode_cmap4, create_ToUnicode_cmap12,
	otf_create_ToUnicode_stream): Adapt.

2013-02-15  Khaled Hosny  <khaledhosny@eglug.org>

	* src/cidtype2.c: Fix loading *.dfont files on non-Mac platforms.
	* src/fontmap.c: Don't include unused ApplicationServices headers
	* configure.ac src/Makefile.am: Don't check for now unused Apple
	ApplicationServices.

2013-02-12  Khaled Hosny  <khaledhosny@eglug.org>

	* src/dpxfile.c, src/dpxfile.h (dpx_find_dfont_file): Make public.
	* src/fontmap.c (pdf_load_native_font_from_path): Fix loading *.dfont files.
	* src/fontmap.c (pdf_load_native_font): Drop use of deprecated ATS API, all
	native fonts should be given as file names.
	* src/fontmap.c (pdf_load_native_font): Show failed font name in error
	message.

2013-02-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* data/Makefile.am (configdatadir, mapdatadir, cmapdatadir):